--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>admin</title>
+    <title>admin-client-myblank</title>
     <link rel="stylesheet" href="/css/reset.css">
   </head>
   <body>
